@@ -1,0 +1,4 @@
+* Booting CD32 with CD inserted works, but inserting later, or eject +
+  re-insert does not seem to work right now.
+* Booting A1000 to kickstart screen does not work. Broke in FS-UAE 2.5.9dev /
+  WinUAE 2.9.0 beta 9.
