@@ -1,0 +1,6 @@
+#ifndef FSUAE_OPTIONS_H
+#define FSUAE_OPTIONS_H
+
+#define OPTION_CPU_IDLE "cpu_idle"
+
+#endif /* FSUAE_OPTIONS_H */
