@@ -30,7 +30,7 @@ int pause_emulation = 0;
 int uaelib_debug = 0;
 
 int sleep_resolution = 1000 / 1;
-int pissoff_value = 25000;
+int pissoff_value = 15000 * CYCLE_UNIT;
 
 //int uaeser_getdatalenght (void) {
 //    return uaeser_getdatalength();
