@@ -1,5 +1,6 @@
 Version 2.5.15dev:
 
+* Removed cpu_idle override, added new cpu_idle option (0 - 10).
 * Implemented support for growable VHD hard drive images.
 * Added proper error message when libcapsimage plugin is missing.
 * Use new dlopen plugin interface to load ppc and libcapsimage plugins.
